* Basic registration flow. More to come...

--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -8,7 +8,7 @@ Log in
 </div>
 
 <div class="btn btn-large btn-info add-box-shadow" id="signup">
-Sign up
+<a href="/accounts/register/">Sign up</a>
 </div>
 
 <div class="well login-set" id="login-window">
