--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -87,13 +87,9 @@
                     <div class="item"><img src="/site_media/img/slideshow_04.jpg" /></div>
                 </div>
             </div>
-            <div class="text-content" id="phrase1">
-                <h2>Welcome to TeachDentistry.org</h2>
-                Enjoy teaching tomorrow’s dentists today
-            </div>
             <div class="text-content" id="phrase2">
                 So you want to give back?<br />
-                Learn from other dentists who have.
+                Learn how teaching has changed other dentists’ lives.
             </div>
              {% block login_overlay %}{% endblock %}
              <div class="gradient-overlay"></div>
@@ -143,7 +139,7 @@
         <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap.js"></script>
     {% endcompress %}
     
-	<script src="/site_media/js/jquery-ui-1.10.3.min.js"></script>
+	
 
     {% block js %}{% endblock %}
     
