--- a/teachdentistry/templates/main/edit_page.html
+++ b/teachdentistry/templates/main/edit_page.html
@@ -21,7 +21,7 @@
 	</style>
 {% endcompress %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/jquery-ui.min.js" type="text/javascript"></script>
+<script src="/site_media/js/jquery-ui-1.10.3.min.js"></script>
 
 {% compress js %}
 <script type="text/javascript">
