--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -119,6 +119,7 @@
                     {% block content %}{% endblock %}
                     <div class="visualclear"></div>
                     {% block content-nav %}{% endblock %}
+                    <div class="visualclear-bottom"></div>
                 </div>
             {% endblock %}
             </div>
