--- a/teachdentistry/templates/registration/base_registration.html
+++ b/teachdentistry/templates/registration/base_registration.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
+{% extends "base_teachdentistry.html" %}
 {% load i18n %}
-{% block module_slug %}registration{% endblock %}
+{% block module_slug %}Registration{% endblock %}
+{% block carousel_slideshow %}{% endblock %}
+{% block primarynav %}{% endblock %}
 {% block content %}
     <div id ="register" class="span4 offset3">
         {% block registration_content %}
