--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -39,25 +39,24 @@ Log in
 <h2 class="tab-header">What Teach Dentistry has to offer</h2>
 
 <div class="index-tabs" id="tabs">
-	{% comment %}<div id="tabs-1">
+	{% comment %}<div class="item-tab" id="tabs-1">
 		<h2>Watch a video</h2>
 		<p class="video-placeholder img-rounded"></p>
 	</div>{% endcomment %}
-	<div id="tabs-2">
+	<div class="item-tab" id="tabs-2">
 		<h2>Where do I start?</h2>
 		<p>Throughout this course you will learn from dentists working in academic settings. See what they have to say!
 </p>
 	</div>
-	<div id="tabs-3">
+	<div class="item-tab" id="tabs-3">
 		<h2>What do I need to know?</h2>
 		<p>You will find information on the logistics of academe along with a map profiling dentists working in academics throughout the United States. </p>
 	</div>
-	<div id="tabs-4">
+	<div class="item-tab" id="tabs-4">
 		<h2>Earn a CE credit</h2>
 		<p>By signing up and completing this course, you will receive one continuing education credit.</p>
 	</div>
 </div>
-<div class="visualclear"></div>
 
 
 
