--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -7,12 +7,10 @@
 Log in
 </div>
 
-<div class="btn btn-large btn-info add-box-shadow" id="signup">
-<a href="/accounts/register/">Sign up</a>
-</div>
+<a href="/accounts/register/" class="btn btn-large btn-info add-box-shadow" id="signup">Sign up</a>
 
 <div class="well login-set" id="login-window">
-    <button type="button" class="close" id="close-login">&times;</button>
+    <button type="button" class="btn btn-small pull-right" id="close-login">X</button>
     <div id="login-form">
         <form method="post" action=".">
         <label for="id_username">Username: {{ form.username }}</label>
@@ -20,6 +18,7 @@ Log in
         <input type="submit" value="Log in" class="btn btn-large btn-primary" id="td_login" />
         <input type="hidden" name="next" value="{{ next }}" />
         </form>
+        <p class="forgot-password"><a href="/accounts/password/reset/">Did you forget your username or password?</a></p>
     </div>
 </div>
 
@@ -36,7 +35,7 @@ Log in
 </form>{% endcomment %}
 
 
-<h2 class="tab-header">What Teach Dentistry has to offer</h2>
+<h2 class="tab-header">Learn how to become a dental educator</h2>
 
 <div class="index-tabs" id="tabs">
 	{% comment %}<div class="item-tab" id="tabs-1">
@@ -44,17 +43,20 @@ Log in
 		<p class="video-placeholder img-rounded"></p>
 	</div>{% endcomment %}
 	<div class="item-tab" id="tabs-2">
-		<h2>Where do I start?</h2>
-		<p>Throughout this course you will learn from dentists working in academic settings. See what they have to say!
-</p>
+		<h2>I teach dentistry because...</h2>
+		<p>Discover the rewards other dentists have received from teaching.</p>
 	</div>
 	<div class="item-tab" id="tabs-3">
-		<h2>What do I need to know?</h2>
-		<p>You will find information on the logistics of academe along with a map profiling dentists working in academics throughout the United States. </p>
+		<h2>Everyone has something to offer</h2>
+		<p><i>“We need so many talented men and women in academia - the doors are wide open to all of you. We need you. Come on and join.”</i> ~ Dennis Mitchell, DDS, MPH</p>
+
+        <p>Find out about the different paths that have brought your peers to teach dentistry and how you can do it, too.</p>
 	</div>
 	<div class="item-tab" id="tabs-4">
-		<h2>Earn a CE credit</h2>
-		<p>By signing up and completing this course, you will receive one continuing education credit.</p>
+		<h2>Start teaching</h2>
+		<p>Find out ways that you can get involved, from volunteering to full-time teaching. Learn how to get started.</p>
+
+        <p>By completing this free course, you will receive one continuing education credit.</p>
 	</div>
 </div>
 
