User profile update + multiselect creation

--- a/teachdentistry/templates/registration/registration_form.html
+++ b/teachdentistry/templates/registration/registration_form.html
@@ -1,5 +1,5 @@
 {% extends "registration/base_registration.html" %}
-{% load i18n registrationform%}
+{% load i18n %}
 
 {% block registration_content %}
 <h2 class="pagetitle">Register</h2>Sign up for an account to use Learn.nynjaetc.org<br /><br />
