--- a/teachdentistry/templates/main/index.html
+++ b/teachdentistry/templates/main/index.html
@@ -3,18 +3,10 @@
 {% block primarynav %}{% endblock %}
 
 {% block content %}
-<div class="hero-unit">
-<h2>Your login is successful</h2>
-<p>Please pardon our appearance. Teach Dentistry is under construction.</p>
-</div>
+<p class="opening-text">Teach Dentistry is a learning module that lets you explore the foundations of entering dental academics while charting your own path. Along the way you will be introduced to a diverse set of dentists who entered dental academics at varying points in their careers. At the conclusion of this learning exercise, you will have the opportunity to search and sort through a map of dentists working in academic settings throughout the United States.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nulla lectus, volutpat eget egestas non, pretium gravida ligula. Ut non vehicula lacus. Nunc viverra lectus eu enim lobortis posuere. Nam lacinia mollis ligula, non porttitor dolor vulputate in. Etiam in arcu ligula. Duis pharetra congue lacus. Donec nec porttitor enim, ac vulputate nisl.</p>
 
-<p>Quisque pretium facilisis ante in euismod. Nulla commodo luctus neque. Integer sed est dapibus, lacinia massa vitae, dapibus turpis. Nam mauris diam, euismod non lacinia a, eleifend ut purus. Mauris porttitor purus eget metus commodo, vel posuere eros euismod.</p>
-
-<p>Etiam magna nisi, ornare ac velit ut, rutrum porttitor ligula. Aliquam ac tincidunt justo, at mattis sapien. Morbi nec elit vestibulum, condimentum mi ac, gravida sapien. Quisque metus tellus, varius sed commodo eu, rutrum eget lacus. Cras pretium dolor pulvinar, pretium ligula sit amet, venenatis mi.</p>
-
-<p><a href="/intro/">Go to Content</a></p>
+<p class="opening-start"><a class="pager_button" href="/intro/">Let’s get started! <b>&rarr;</b></a></p>
 
 {% endblock %}
 
