--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -91,7 +91,13 @@
             {% if next %}
                 {% if not next.is_root %}
                     {% if next_unlocked %}
-                        <a href="{{next.get_absolute_url}}" id="next" class="pager_button">{{next.label}} <b>&rarr;</b></a>
+                        {% if needs_submit %}
+                            {% if is_submitted %}
+                                <a href="{{next.get_absolute_url}}" id="next" class="pager_button">{{next.label}} <b>&rarr;</b></a>
+                            {% else %}
+                                <div id="next" class="pager_button">{{next.label}} <b>&rarr;</b></div>
+                            {% endif %}
+                        {% endif %}
                     {% else %}
                         <div id="next" class="pager_button">{{next.label}} <b>&rarr;</b></div>
                     {% endif %}
