educator profile refinement

--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -71,7 +71,7 @@
                     {% endblock %}
                 </ul>
             </div>
-            <div class="section-nav-tab"><div class="section-nav-tab-inner">CONTENT</div></div>
+            <div class="section-nav-tab"><div class="section-nav-tab-inner">SECTIONS</div></div>
         </div>
         {% endblock %}
         {% endif %}
