--- a/teachdentistry/templates/main/profile.html
+++ b/teachdentistry/templates/main/profile.html
@@ -253,6 +253,8 @@
                 {{educator.gender}}<br />        
                 {{educator.contact_email}}<br />{% endcomment %}
         </div>
+        <div class="map_back_nav"><a href="/map/" class="pager_button"><b>&larr;</b> Return to Dental Educator Map</a></div>
+        <div class="visualclear-bottom"></div>
     </div>
 {% endblock %}
 
