--- a/teachdentistry/templates/registration/base_registration.html
+++ b/teachdentistry/templates/registration/base_registration.html
@@ -4,8 +4,8 @@
 {% block carousel_slideshow %}{% endblock %}
 {% block primarynav %}{% endblock %}
 {% block content %}
-    <div id ="register" class="span4 offset3">
-        {% block registration_content %}
-        {% endblock %}
-    </div>
+<div class="signup-block">
+    {% block registration_content %}
+    {% endblock %}
+</div>
 {% endblock %}
