--- a/teachdentistry/templates/registration/password_reset_done.html
+++ b/teachdentistry/templates/registration/password_reset_done.html
@@ -2,5 +2,9 @@
 {% load i18n %}
 
 {% block registration_content %}
-<p>{% trans "Email with password reset instructions has been sent." %}</p>
+<h2 class="pagetitle signuptitle">Reset username or password</h2>
+<div class="p">
+We have sent you an email with a link to reset your password.  Please check
+your email and click the link to continue.
+</div>
 {% endblock %}
