--- a/teachdentistry/templates/registration/activate.html
+++ b/teachdentistry/templates/registration/activate.html
@@ -1,18 +1,19 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}{% if account %}Activation complete{% else %}Activation problem{% endif %}{% endblock %}
 
 {% block registration_content %}
+<h2 class="pagetitle signuptitle">Account Activation</h2>
 
 {% if account %}
 
-<p>{% trans "Account successfully activated" %}</p>
-
-<p><a href="{% url auth_login %}">{% trans "Log in" %}</a></p>
+<div class="p">Thanks {{ account }}, your account activation is now completed! You may now <a href="{% url auth_login %}">log in</a> using the username and password you set at registration.</div>
 
 {% else %}
 
-<p>{% trans "Account activation failed" %}</p>
+<div class="p">Oops &ndash; it seems that your activation key is invalid.  Please check the url again.</div>
 
 {% endif %}
 
 {% endblock %}
+
