--- a/teachdentistry/templates/registration/activation_complete.html
+++ b/teachdentistry/templates/registration/activation_complete.html
@@ -1,9 +1,10 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}Account activation complete{% endblock %}
 
 {% block registration_content %}
-    <p>Thank you for registering for the New York/New Jersey Aids Education Training Center's online learning center.</p>
-    <p><strong>You have activated your account.</strong></p>
-    <p>Please <a href="/accounts/login/?next=/">log in</a> with your user name and password.</p>
-    <p>The first learning module available to you is Hepatitis C Medications and Special Considerations for People Living with HIV.</p>
+<h2 class="pagetitle signuptitle">Account activation completed!</h2>
+    <div class="p">Thank you for signing up for Teach Dentistry.</div>
+    <div class="p"><strong>You have activated your account.</strong></div>
+    <p>You may now <a href='{% url auth_login %}'>login</a> using the username and password you set at registration to access this site.</p>
 {% endblock %}
