--- a/teachdentistry/templates/registration/registration_complete.html
+++ b/teachdentistry/templates/registration/registration_complete.html
@@ -1,6 +1,13 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
+{% block title %}Activation email sent{% endblock %}
 
 {% block registration_content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+<h2 class="pagetitle signuptitle">Thank you!</h2>
+
+<div class="p">You’ve almost completed your Teach Dentistry account creation process.</div>
+
+<div class="p">We've just sent you an email. Please check it and 
+click on the confirmation link to activate your Teach Dentistry account.</div>
+
 {% endblock %}
